Разбить класс PostDto на классы PostDtoRequest и PostDtoResponse, внести соответствующие коррективы во всех слоях, тестах, html