@@ -7,7 +7,8 @@ import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.test.context.TestPropertySource;
 import org.springframework.test.context.jdbc.Sql;
-import ru.yandex.practicum.dto.PostDto;
+import ru.yandex.practicum.dto.PostRequestDto;
+import ru.yandex.practicum.dto.PostResponseDto;
 import ru.yandex.practicum.model.Comment;
 
 import java.io.IOException;
@@ -53,9 +54,9 @@ public class PostRepositoryTest {
 
     @Test
     void addPostDto_shouldAddPostDtoToDatabase() {
-        PostDto postDto = new PostDto(
-                0, "Post3", null, "Text3", 0, "#Tag1");
-        PostDto savedPostDto = postRepository.addPostDto(postDto);
+        PostRequestDto postDto = new PostRequestDto(
+                0, "Post3", null, "Text3", "#Tag1");
+        PostResponseDto savedPostDto = postRepository.addPostDto(postDto);
         assertNotNull(savedPostDto);
         assertEquals(postDto.getName(), savedPostDto.getName(), "Post names don't match");
         assertEquals(postDto.getText(), savedPostDto.getText(), "Post texts don't match");
@@ -64,10 +65,10 @@ public class PostRepositoryTest {
 
     @Test
     void addLike_shouldAddLikeToPostDto() throws Exception {
-        PostDto postDto1 = postRepository.getPostById(1);
+        PostResponseDto postDto1 = postRepository.getPostById(1);
         int currentLikes = postDto1.getNumberOfLikes();
         postRepository.addLike(1);
-        PostDto postDto1WithLike = postRepository.getPostById(1);
+        PostResponseDto postDto1WithLike = postRepository.getPostById(1);
         int incrementedLikes = postDto1WithLike.getNumberOfLikes();
         assertEquals(incrementedLikes, currentLikes + 1, "Number of likes was changed incorrectly");
     }
@@ -75,10 +76,10 @@ public class PostRepositoryTest {
     @Test
     void addComment_shouldAddCommentToPostDto() throws Exception {
         Comment comment = new Comment(1, 1, "Comment to Post1");
-        PostDto postDto1 = postRepository.getPostById(1);
+        PostResponseDto postDto1 = postRepository.getPostById(1);
         assertTrue(postDto1.getCommentsList().isEmpty(), "Comments list must be empty");
         postRepository.addComment(postDto1.getId(), comment.getText());
-        PostDto postDto1WithComment = postRepository.getPostById(1);
+        PostResponseDto postDto1WithComment = postRepository.getPostById(1);
         assertEquals(postDto1WithComment.getCommentsList().size(), 1,
                 "Comments list must contain 1 comment");
         assertEquals(postDto1WithComment.getCommentsList().get(0).getText(), comment.getText(),
@@ -87,9 +88,9 @@ public class PostRepositoryTest {
 
     @Test
     void getSortedFeed_shouldReturnSortedFeed() {
-        List<PostDto> feed = postRepository.getSortedFeed();
+        List<PostResponseDto> feed = postRepository.getSortedFeed();
         assertEquals(feed.size(), 3, "Feed should contain 3 posts");
-        PostDto postDto3 = postRepository.getPostById(3);
+        PostResponseDto postDto3 = postRepository.getPostById(3);
         assertEquals(feed.get(0), postDto3, "Post 3 should be the first in feed");
     }
 
@@ -97,16 +98,16 @@ public class PostRepositoryTest {
     void getFeedWithChosenTags_shouldReturnFeedWithChosenTags() {
         String tagString1 = "('#Tag1')";
         String tagString2 = "('#CommonTag','#Tag2')";
-        List<PostDto> feedWithChosenTag1 = postRepository.getFeedWithChosenTags(tagString1);
+        List<PostResponseDto> feedWithChosenTag1 = postRepository.getFeedWithChosenTags(tagString1);
         assertTrue(feedWithChosenTag1.size() == 1, "Feed should contain 1 post with #Tag1");
-        List<PostDto> feedWithChosenTags2AndCommon = postRepository.getFeedWithChosenTags(tagString2);
+        List<PostResponseDto> feedWithChosenTags2AndCommon = postRepository.getFeedWithChosenTags(tagString2);
         assertTrue(feedWithChosenTags2AndCommon.size() == 2,
                 "Feed should contain 2 posts with #Tag2 and #CommonTag");
     }
 
     @Test
     void getPostById_shouldReturnPostById() {
-        PostDto postDto1 = postRepository.getPostById(1);
+        PostResponseDto postDto1 = postRepository.getPostById(1);
         assertTrue(postDto1 != null, "Post 1 should exist");
         assertEquals(postDto1.getName(), "Post1", "Name of Post 1 is incorrect");
         assertEquals(postDto1.getText(), "Text1", "Text of Post 1 is incorrect");
@@ -115,21 +116,21 @@ public class PostRepositoryTest {
 
     @Test
     void getFeedSplittedByPages_shouldReturnFeedSplittedBy2Pages() {
-        List<PostDto> feedSplittedBy2Pages1 = postRepository.getFeedSplittedByPages(2, 1);
+        List<PostResponseDto> feedSplittedBy2Pages1 = postRepository.getFeedSplittedByPages(2, 1);
         assertTrue(feedSplittedBy2Pages1.size() == 2, "First page should contain 2 posts");
-        PostDto postDto3 = postRepository.getPostById(3);
-        PostDto postDto2 = postRepository.getPostById(2);
-        PostDto firstPostInFeedSplittedBy2Pages1 = feedSplittedBy2Pages1.get(0);
-        PostDto secondPostInFeedSplittedBy2Pages1 = feedSplittedBy2Pages1.get(1);
+        PostResponseDto postDto3 = postRepository.getPostById(3);
+        PostResponseDto postDto2 = postRepository.getPostById(2);
+        PostResponseDto firstPostInFeedSplittedBy2Pages1 = feedSplittedBy2Pages1.get(0);
+        PostResponseDto secondPostInFeedSplittedBy2Pages1 = feedSplittedBy2Pages1.get(1);
         assertEquals(firstPostInFeedSplittedBy2Pages1.getName(), postDto3.getName(),
                 "First on page 1 should be post 3");
         assertEquals(secondPostInFeedSplittedBy2Pages1.getText(), postDto2.getText(),
                 "Second on page 1 should be post 2");
 
-        List<PostDto> feedSplittedBy2Pages2 = postRepository.getFeedSplittedByPages(2, 2);
+        List<PostResponseDto> feedSplittedBy2Pages2 = postRepository.getFeedSplittedByPages(2, 2);
         assertTrue(feedSplittedBy2Pages2.size() == 1, "Second page should contain 2 posts");
-        PostDto postDto1 = postRepository.getPostById(1);
-        PostDto firstPostInFeedSplittedBy2Pages2 = feedSplittedBy2Pages2.get(0);
+        PostResponseDto postDto1 = postRepository.getPostById(1);
+        PostResponseDto firstPostInFeedSplittedBy2Pages2 = feedSplittedBy2Pages2.get(0);
         assertEquals(firstPostInFeedSplittedBy2Pages2.getName(), postDto1.getName(),
                 "First on page 2 should be post 1");
         assertEquals(firstPostInFeedSplittedBy2Pages2.getText(), postDto1.getText(),
@@ -138,24 +139,22 @@ public class PostRepositoryTest {
 
     @Test
     void changePost_shouldChangePost() {
-        PostDto postDto1 = postRepository.getPostById(1);
-        postDto1.setName("Changed post 1");
-        postDto1.setText("Changed text 1");
-        postDto1.getTagsTextList().clear();
-        PostDto changedPostDto1 = postRepository.changePost(postDto1);
-        assertEquals(changedPostDto1.getName(), postDto1.getName(), "Name was changed incorrect");
-        assertEquals(changedPostDto1.getText(), postDto1.getText(), "Text was changed incorrect");
-        assertEquals(changedPostDto1.getTagsTextList(), postDto1.getTagsTextList(),
+        PostRequestDto changedPostRequestDto = new PostRequestDto(1, "Changed post 1", null, "Changed text 1", "#Tag1");
+        PostResponseDto changedPostResponseDto = postRepository.changePost(changedPostRequestDto);
+
+        assertEquals(changedPostRequestDto.getName(), changedPostResponseDto.getName(), "Name was changed incorrect");
+        assertEquals(changedPostRequestDto.getText(), changedPostResponseDto.getText(), "Text was changed incorrect");
+        assertEquals(changedPostRequestDto.getTagsTextList(), changedPostResponseDto.getTagsTextList(),
                 "Tags were changed incorrectly");
     }
 
     @Test
     void changeComment_shouldChangeComment() {
-        PostDto postDto2 = postRepository.getPostById(2);
-        Comment comment = postDto2.getCommentsList().get(0);
+        PostResponseDto postDto2 = postRepository.getPostById(2);
+        Comment comment = postDto2.getCommentsList().getFirst();
         //comment.setText("Changed comment text");
         String changedText = "Changed comment text";
-        PostDto postDto2WithChangedComment
+        PostResponseDto postDto2WithChangedComment
                 = postRepository.changeComment(comment.getId(), postDto2.getId(), changedText);
         assertTrue(postDto2WithChangedComment != null,
                 "After changing comment post doesn't exist anymore");
@@ -165,20 +164,20 @@ public class PostRepositoryTest {
 
     @Test
     void deletePost_shouldDeletePost() {
-        PostDto postDto1 = postRepository.getPostById(1);
+        PostResponseDto postDto1 = postRepository.getPostById(1);
         postRepository.deletePost(postDto1.getId());
-        List<PostDto> feedWithoutPost1 = postRepository.getSortedFeed();
+        List<PostResponseDto> feedWithoutPost1 = postRepository.getSortedFeed();
         assertFalse(feedWithoutPost1.contains(postDto1), "Feed shouldn't contain post 1");
         assertTrue(feedWithoutPost1.size() == 2, "Feed should contain only 2 posts");
     }
 
     @Test
     void deleteComment_shouldDeleteComment() {
-        PostDto postDto1 = postRepository.getPostById(1);
+        PostResponseDto postDto1 = postRepository.getPostById(1);
         Comment comment = new Comment(1, 1, "Comment to Post1");
         postDto1.getCommentsList().add(comment);
         assertTrue(postDto1.getCommentsList().contains(comment));
-        PostDto postDto1WithoutComment = postRepository.deleteComment(postDto1.getId(), comment.getId());
+        PostResponseDto postDto1WithoutComment = postRepository.deleteComment(postDto1.getId(), comment.getId());
         assertFalse(postDto1WithoutComment.getCommentsList().contains(comment),
                 "Post 1 comments list shouldn't contain comment 1");
         assertTrue(postDto1WithoutComment.getCommentsList().isEmpty(), "Post 1 comments list should be empty");
